--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
     "sweetalert": "^2.1.2",
+    "uifx": "^2.0.7",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
