--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://thelordseba.github.io/JuegoDeMemoria",
+  "homepage": "https://thelordseba.github.io/PokePareja",
   "name": "juego-mental",
   "version": "0.1.0",
   "private": true,
